@@ -667,6 +667,9 @@ buffer_options.lineSeparator=Line separator:\
 
 # Global options dialog
 options.title=Global Options
+options.jedit.label=jEdit Options
+options.plugins.label=Plugin Options
+options.shortcuts.label=Shortcuts
 options.general.label=General
 options.general.lf=Swing look & feel:\ 
 options.general.encoding=File encoding:\ 
@@ -737,8 +740,8 @@ options.keys.name=Command
 options.keys.binding=Keyboard shortcut
 options.keys.sort.label=Sort by label
 options.keys.sort.shortcut=Sort by shortcut
-options.command-keys.label=Command Shortcuts
-options.macro-keys.label=Macro Shortcuts
+options.command-keys.label=Commands
+options.macro-keys.label=Macros
 options.abbrevs.label=Abbreviations
 options.abbrevs.set=Abbrev set:
 options.abbrevs.expandOnInput=Auto-expand abbrevs
